# Rust-GTK-Resources-Example

./: .gitignore  Cargo.toml  build.rs
resources/: main_window.glade  resources.xml  style.css
src/: main.rs
